# cgrapht

./: .bazelrc  .gitignore  BUILD.bazel  CHANGELOG.md  Doxyfile  LICENSE  MODULE.bazel  README.md  WORKSPACE  doxygen-custom.css  release-please-config.json
.bcr/: config.yml
.github/workflows/: ci.yml  docs.yml  pr-title-check.yml
bcr/: metadata.json
headers/: commons.hpp  default_edge.hpp  graph.hpp  models.hpp
headers/cgrapht/: commons.hpp  default_edge.hpp  graph.hpp  models.hpp
src/: BUILD.bazel
test/: BUILD.bazel  test_connecting_edges.cc  test_edge_manipulation_edge_cases.cc  test_edge_manipulation_happy_case.cc  test_neighbour_functions.cc  test_result.cc  test_vertex_manipulation_edge_cases.cc  test_vertex_manipulation_happy_case.cc
