load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary", "cc_test")

cc_library(
    name = "cgrapht",
    hdrs = glob([
        "headers/*.hpp",
    ]),
    copts = [
            "-std=c++20",
            "-Wall",
            "-Werror",
    ],
    includes = [
        "headers",
    ],
    visibility = ["//visibility:public"],
)