load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "cgrapht",
    hdrs = glob([
        "headers/cgrapht/**/*.hpp",
    ]),
    copts = [
        "-std=c++20",
        "-Wall",
        "-Werror",
    ],
    strip_include_prefix = "headers",
    visibility = ["//visibility:public"],
)