load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary", "cc_test")

cc_test(
    name = "cgrapht_unit_tests",
    srcs = [
        "test_edge_manipulation_happy_case.cc",
        "test_vertex_manipulation_happy_case.cc",
        "test_edge_manipulation_edge_cases.cc",
        "test_vertex_manipulation_edge_cases.cc",
        "test_neighbour_functions.cc",
        "test_connecting_edges.cc"
    ],
    deps = [
        "//:cgrapht",
        "@catch2//:catch2_main",
    ],
)
